--- a/1.html
+++ b/1.html
@@ -1,2 +1,22 @@
-Hypertext Markup Language (HTML) is the standard markup
-language for <strong>creating <u>web</u> pages</strong> and web applications. With Cascading Style Sheets
+<head>
+<title>WEB1 - html</title>
+<meta charset="utf-8">
+</head>
+
+<body>
+  <ol>
+    <li>html</li>
+    <li>css</li>
+    <li>javaScript</li>
+  </ol>
+  <ul>
+    <li>egoing</li>
+    <li>k8805</li>
+    <li>youbin</li>
+  </ul>
+  <h1> HTML이란 무엇인가? </h1>
+
+  <p>Hypertext Markup Language (HTML) is the standard markup</p><p style ="margin-top:45px;">
+  language for <strong>creating <u>web</u> pages</strong> and web applications. With Cascading Style Sheets</p>
+  <img src="coding.jpg" width="100%">
+</body>
