--- a/1.html
+++ b/1.html
@@ -1,22 +1,21 @@
-<head>
-<title>WEB1 - html</title>
-<meta charset="utf-8">
-</head>
+<!doctype html>
+<html>
+  <head>
+  <title>WEB1 - HTML</title>
+  <meta charset="utf-8">
+  </head>
 
-<body>
-  <ol>
-    <li>html</li>
-    <li>css</li>
-    <li>javaScript</li>
-  </ol>
-  <ul>
-    <li>egoing</li>
-    <li>k8805</li>
-    <li>youbin</li>
-  </ul>
-  <h1> HTML이란 무엇인가? </h1>
+  <body>
+    <h1><a href="index.html">WEB</a></h1>
+    <ol>
+      <li><a href="1.html"><strong>html</strong></a></li>
+      <li><a href="2.html">css</a></li>
+      <li><a href="3.html">javaScript</a></li>
+    </ol>
+    <h2> HTML이란 무엇인가? </h2>
 
-  <p>Hypertext Markup Language (HTML) is the standard markup</p><p style ="margin-top:45px;">
-  language for <strong>creating <u>web</u> pages</strong> and web applications. With Cascading Style Sheets</p>
-  <img src="coding.jpg" width="100%">
-</body>
+    <p><a href="https://github.com/ghdcksgml1?tab=repositories" target="_blank">Hypertext Markup Language (HTML)</a> is the standard markup</p><p style ="margin-top:45px;">
+    language for <strong>creating <u>web</u> pages</strong> and web applications. With Cascading Style Sheets</p>
+    <img src="coding.jpg" width="100%">
+  </body>
+</html>
