--- a/2.html
+++ b/2.html
@@ -3,14 +3,25 @@
   <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+  <style>
+    a{
+      color:black;
+    }
+    .saw{
+      color:grey;
+    }
+    #CSS{
+      color:blue;
+    }
+  </style>
   </head>
 
   <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-      <li><a href="1.html">html</a></li>
-      <li><a href="2.html"><strong>css</strong></a></li>
-      <li><a href="3.html">javaScript</a></li>
+      <li><a href="1.html" class="saw">html</a></li>
+      <li><a href="2.html" id = "CSS"><strong>css</strong></a></li>
+      <li><a href="3.html"class="saw">javaScript</a></li>
     </ol>
     <h2> HTML이란 무엇인가? </h2>
 
