--- a/index.html
+++ b/index.html
@@ -1,19 +1,63 @@
 <!doctype html>
 <html>
-  <head>
+<head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
-  </head>
+  <style>
+    #grid{
+      display:grid;
+      grid-template-columns: 140px 1fr;
+    }
+    #grid2{
+      border-left: 1px solid gray;
+      padding: 10px;
+    }
+    body{
+      marin:0;
+    }
+    a {
+      color: black;
+      text-decoration: none;
+    }
+    h1 {
+      font-size : 40px;
+      text-align: center;
+      border-bottom:1px solid gray;
+      margin:0;
+      padding: 20px;
+    }
+    ol{
+      border-right:1px solid gray;
+      width : 100px;
+      margin:0;
+      padding : 20px;
+    }
 
+  </style>
+</head>
   <body>
     <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
+      <div id="grid1">
+        <ol>
+          <li><a href="1.html">html</a></li>
+          <li><a href="2.html" style="color:red;text-decoration:underline">css</a></li>
+          <li><a href="3.html">javaScript</a></li>
+        </ol>
+      </div>
+    <!--
     <ol>
-      <li><a href="1.html">html</a></li>
-      <li><a href="2.html">css</a></li>
-      <li><a href="3.html">javaScript</a></li>
+      <li><a href="1.html"><font color = "red">html</font></a></li>
+      <li><a href="2.html"><font color = "red">css</font></a></li>
+      <li><a href="3.html"><font color = "red">javaScript</font></a></li>
     </ol>
-    <h2> HTML이란 무엇인가? </h2>
-    <p> <iframe width="560" height="315" src="https://www.youtube.com/embed/7eU2HVaY0HM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>요것은 WEB </p>
-    <img src="coding.jpg" width="100%">
+  -->
+      <div id="grid2">
+        <h2> HTML이란 무엇인가? </h2>
+        <p> 요것은 WEB </p>
+        <img src="coding.jpg" width="100%">
+      </div>
+    </div>
+
   </body>
 </html>
