--- a/2.html
+++ b/2.html
@@ -1,31 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-  <title>WEB1 - CSS</title>
-  <meta charset="utf-8">
-  <style>
-    a{
-      color:black;
-    }
-    .saw{
-      color:grey;
-    }
-    #CSS{
-      color:blue;
-    }
-  </style>
+    <meta charset="utf-8">
+    <title>CSS</title>
+    <link rel="stylesheet" href="style1.css">
   </head>
-
   <body>
-    <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html" class="saw">html</a></li>
-      <li><a href="2.html" id = "CSS"><strong>css</strong></a></li>
-      <li><a href="3.html"class="saw">javaScript</a></li>
-    </ol>
-    <h2> HTML이란 무엇인가? </h2>
-
-    <p> 요것은 CSS</p>
-    <img src="coding.jpg" width="100%">
+    <h1><a href = "index.html">WEB</a></h1>
+    <div id ="grid">
+      <ol>
+        <li><a href= "1.html" class = "saw">HTML</a></li>
+        <li><a href= "2.html" class = "this">CSS</a></li>
+        <li><a href = "3.html" class = "saw">JavaScript</a></li>
+      </ol>
+      <div class = "every_element">
+        <h2>CSS</h2>
+        <p>Cascading Style Sheets (CSS) is a style shee language used for
+          describing the presentation of a document written in a markup language.
+          [1] Although most often used to set the visual style of web pages and
+          user interfaces written in HTML and XHTML, the language can be
+          applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaSCript.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
