--- a/3.html
+++ b/3.html
@@ -1,20 +1,27 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-  <title>WEB1 - javaScript</title>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
+    <title>JavaScript</title>
+    <link rel="stylesheet" href="style1.css">
   </head>
-
   <body>
-    <h1><a href="index.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html">html</a></li>
-      <li><a href="2.html">css</a></li>
-      <li><a href="3.html"><strong>javaScript</strong></a></li>
-    </ol>
-    <h2> HTML이란 무엇인가? </h2>
-
-    <p> 요것은 javaScript </p>
-    <img src="coding.jpg" width="100%">
+      <h1><a href = "index.html">WEB</a></h1>
+      <div id ="grid">
+        <ol>
+          <li><a href= "1.html" class = "saw">HTML</a></li>
+          <li><a href= "2.html" class = "saw">CSS</a></li>
+          <li><a href = "3.html" class = "this">JavaScript</a></li>
+        </ol>
+        <div class = "every_element">
+          <h2>JavaScript</h2>
+          <p>Cascading Style Sheets (CSS) is a style shee language used for
+            describing the presentation of a document written in a markup language.
+            [1] Although most often used to set the visual style of web pages and
+            user interfaces written in HTML and XHTML, the language can be
+            applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaSCript.
+          </p>
+        </div>
+  </div>
   </body>
 </html>
