--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style1.css">
   </head>
   <body>
-    <h1><a href = "index.html">WEB</a></h1>
+    <h1><a href = "/">WEB</a></h1>
     <div id ="grid">
       <ol>
         <li><a href= "1.html" class = "this">HTML</a></li>
